--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mongodb://admin:admin@cluster0-shard-00-00-ebu9m.mongodb.net:27017,cluster0-shard-00-01-ebu9m.mongodb.net:27017,cluster0-shard-00-02-ebu9m.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://admin:admin@cluster0-ebu9m.mongodb.net/test?retryWrites=true&w=majority"
